manualdeployment/service-lb-private.yaml
apiVersion: v1
kind: Service
metadata:
  name: private-lb
  labels:
    app: kabnodejsdemo
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: private
spec:
  type: LoadBalancer
  selector:
    app: kabnodejsdemo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
