manualdeployment/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-demo
  labels:
    app: kabnodejsdemo
spec:
  type: NodePort
  selector:
    app: kabnodejsdemo
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
