manualdeployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kabnodejsdemosvc-http-80
  labels:
    app: kabnodejsdemo
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kabnodejsdemo
